--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,6 +1,12 @@
-/sortTest.class
+/City.class
 /CityTest.class
-/CountryTest.class
+/Continent.class
 /ContinentTest.class
-/PromptTest.class
+/Country.class
+/CountryTest.class
+/Driver.class
 /DriverTest.class
+/Prompt.class
+/PromptTest.class
+/sort.class
+/sortTest.class
