--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,6 +1,19 @@
+/City.class
+/CityTest.class
+/Continent.class
+/ContinentTest.class
+/Country$Comparators$1.class
 /Country$Comparators.class
+/Country.class
+/CountryTest.class
+/Driver.class
+/DriverTest.class
+/Prompt.class
+/PromptTest.class
 /Region$Comparators$1.class
 /Region$Comparators$2.class
 /Region$Comparators$3.class
 /Region$Comparators.class
 /Region.class
+/sort.class
+/sortTest.class
